# oschmod

./: .bumpversion.cfg  .editorconfig  .gitignore  .mergify.yml  .pre-commit-config.yaml  .pre-commit-config.yml  .prototools  .python-version  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cspell.config.yaml  pyproject.toml  pyx.cmd  requirements.txt  setup.cfg  setup.cmd  setup.sh  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/config/: oschmod.dict
.github/workflows/: codeql.yml  python-package.yml  release.yml
oschmod/: __init__.py  cli.py
requirements/: azurepipes.txt  ci.txt  constraints.txt  lint.txt  pip.txt  release.txt  test.txt  types.txt
src/oschmod/: __init__.py  __main__.py
tests/: conftest.py  test_oschmod.py
