[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oschmod"
dynamic = ["version"]
readme = "README.md"
description = """Windows, Linux, and macOS compatible `chmod` ("change mode") Python library to change the
access permissions of file system objects (files and directories)."""
authors = [
    { email = "dirk.avery@GEEmail.com", name = "YakDriver" },
    { email = "joel.vaneenwyk@gmail.com", name = "Joel Van Eenwyk" }
]
requires-python = ">= 3.8"
dependencies = ["build>=1.0", "pywin32>=306; sys_platform=='win32'"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities"
]

[project.license]
file = "LICENSE"

[project.scripts]
ochmod = "oschmod.cli:main"
oschmod = "oschmod.cli:main"

[project.urls]
Homepage = "https://github.com/joelvaneenwyk/oschmod"

[tool.bumpversion]
# bump-my-version configuration
allow_dirty = true
commit = true
commit_args = "--no-verify"
current_version = "0.3.12"
message = "Version updated from {current_version} to {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<dev>post)\\d+\\.dev\\d+)?"
serialize = ["{major}.{minor}.{patch}", "{major}.{minor}.{patch}.{dev}{$PR_NUMBER}.dev{distance_to_latest_tag}"]
tag = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "oschmod/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
replace = "{current_version}...{new_version}"
search = "{current_version}...HEAD"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[tool.bumpversion.parts.dev]
values = ["post", "release"]

[tool.distutils.bdist_wheel]
universal = 1

[tool.pyright]
ignore = ["build/"]

[tool.pytest.ini_options]
addopts = "-rxEfsw\n--strict-markers\n--doctest-modules\n--doctest-glob=\\*.md\n--tb=short"
filterwarnings = "ignore::pytest.PytestConfigWarning"
mock_use_standalone_module = true
norecursedirs = [
    ".env",
    ".git",
    ".mypy-cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "htmlcov"
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
exclude = ["*.egg", "*/static/salt/formulas/*", ".eggs", ".git", ".tox", "__pycache__", "build", "dist", "htmlcov"]
line-length = 100

[tool.ruff.lint]
ignore = ["D107", "D203", "D211", "D213"]
select = ["D", "E", "F", "W"]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=22.3",
    "bump-my-version>=0.16",
    "flake8>=3.9",
    "invoke>=2.2",
    "isort>=5.13",
    "mock>=5.1",
    "mypy>=1.10",
    "poethepoet>=0.24",
    "pre-commit<3.6.0; python_version<='3.8'",
    "pre-commit>=3.6.0; python_version>'3.8'",
    "pyinstaller",
    "pylint>=2.7",
    "pytest-cov>=2.4",
    "pytest-github-actions-annotate-failures>=0.2",
    "pytest-mock",
    "pytest-xdist",
    "pytest>=6.1",
    "ruff>=0.4",
    "tox>=4.15",
    "types-chevron>=0.14",
    "types-psutil>=5.9",
    "types-pywin32>=306",
    "types-PyYAML>=6.0",
    "types-setuptools>=65.4",
    "uv>=0.2",
    "hatch>=1.12.0",
    "hatchling>=1.25.0",
]

[tool.hatch.version]
path = "oschmod/__init__.py"
pattern = "^__version__ = ['\"](?P<version>[>=^\"'\\d\\.]+)['\"]$"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/oschmod"]

[tool.hatch.build.targets.sdist]
include = [
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    ".editorconfig",
    ".mergify.yml",
    "tox.ini",
    "setup.cmd",
    "setup.sh",
    ".pre-commit-config.yaml",
    "requirements-dev.lock",
    "requirements.lock"
]

[tool.virtualenv]
include-system-site-packages = false

